fix footer on small screen

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -5,6 +5,7 @@
         url(../../images/background1.jpg);
     background-size: cover;
     background-position: center;
+    min-width: 900px
 }
 
 .splash_text_container{
@@ -14,7 +15,7 @@
     bottom: -15vh;
     background-color: rgba(37, 46, 46, 0.627);
     /* width: 60%; */
-    /* min-width: 900px */
+    min-width: 900px
 }
 
 
@@ -72,6 +73,7 @@
     bottom: 0px;
     align-items: center;
     justify-content: flex-end;
+    min-width: 900px
 }
 
 .svg__logo__git {
